# cpanel-mcp

./: .env.example  README.md  pyproject.toml  server.py
src/: config.py  cpanel.py  routes.py  server.py
